// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/products GET /admin/variants price selection strategy selects prices based on the passed currency code 1`] = `
Object {
  "count": 1,
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": "test-barcode",
      "calculated_price": 80,
      "calculated_price_incl_tax": null,
      "calculated_price_type": "sale",
      "calculated_tax": null,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": "test-ean",
      "height": null,
      "hs_code": null,
      "id": "test-variant",
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Any<Array>,
      "origin_country": null,
      "original_price": 100,
      "original_price_incl_tax": null,
      "original_tax": null,
      "prices": Any<Array>,
      "product": Any<Object>,
      "product_id": "test-product",
      "sku": "test-sku",
      "tax_rates": null,
      "title": "Test variant",
      "upc": "test-upc",
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
}
`;

exports[`/admin/products GET /admin/variants price selection strategy selects prices based on the passed region id 1`] = `
Object {
  "count": 1,
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": "test-barcode",
      "calculated_price": 80,
      "calculated_price_incl_tax": 80,
      "calculated_price_type": "sale",
      "calculated_tax": 0,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": "test-ean",
      "height": null,
      "hs_code": null,
      "id": "test-variant",
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Any<Array>,
      "origin_country": null,
      "original_price": 100,
      "original_price_incl_tax": 100,
      "original_tax": 0,
      "prices": Any<Array>,
      "product": Any<Object>,
      "product_id": "test-product",
      "sku": "test-sku",
      "tax_rates": Array [
        Object {
          "code": "default",
          "name": "default",
          "rate": 0,
        },
      ],
      "title": "Test variant",
      "upc": "test-upc",
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
}
`;

exports[`/admin/products GET /admin/variants price selection strategy selects prices based on the passed region id and customer id 1`] = `
Object {
  "count": 1,
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": "test-barcode",
      "calculated_price": 40,
      "calculated_price_incl_tax": 40,
      "calculated_price_type": "sale",
      "calculated_tax": 0,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": "test-ean",
      "height": null,
      "hs_code": null,
      "id": "test-variant",
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Any<Array>,
      "origin_country": null,
      "original_price": 100,
      "original_price_incl_tax": 100,
      "original_tax": 0,
      "prices": Any<Array>,
      "product": Any<Object>,
      "product_id": "test-product",
      "sku": "test-sku",
      "tax_rates": Array [
        Object {
          "code": "default",
          "name": "default",
          "rate": 0,
        },
      ],
      "title": "Test variant",
      "upc": "test-upc",
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
}
`;
